<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzle Photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_top">TopActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-2117529455454871/3202717542</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2117529455454871/3662095546</string>
    <string name="msg_your_time">Your time : %s</string>
    <string name="congratulate">Congratulate! You have new best time!</string>
    <string name="msg_you_done">You are done!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="your_name">Your name:</string>
    <string name="choose_level_and_photo">Choose level and photo</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="title_activity_select_photo">SelectPhotoActivity</string>
    <string name="title_activity_crop_photo">CropPhotoActivity</string>
    <string name="time_text">"Time: "</string>
    <string name="best_time_text">"Best : "</string>
    <string name="reset_text">Reset</string>
    <string name="auto_text">Auto</string>
    <string name="start_text">Start</string>
    <string name="start_time">00:00</string>
    <string name="title_activity_rank_time">RankTimeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="time_title_text">TIME</string>
    <string name="user_title_text">USER</string>
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="easy_3x4_text">Easy (3x4)</string>
    <string name="medium_4x4_text">Medium (4x4)</string>
    <string name="hard_5x5_text">Hard (5x5)</string>
    <string name="get_photo_from_gallery">Get photo from Gallery</string>
    <string name="msg_time_out">Time out!</string>
    <string name="msg_error_photo">Error photo!</string>
    <string name="msg_something_wrong">Something went wrong!</string>
    <string name="msg_please_input_name">Please input name!</string>
    <string name="play_text">Play</string>
    <string name="high_score_text">High Score</string>
    <string name="game_started">Game started!</string>
    <string name="exit_app_title">Exit game</string>
    <string name="exit_text">Exit</string>
    <string name="rate_text">Rate</string>
    <string name="msg_rate_app">Do you like this game?</string>
    <string name="crop_text">Crop</string>
    <string name="tut_auto_btn">Press this button to derange the photo.</string>
    <string name="tut_start_btn">Press this button to start the game.</string>
    <string name="tut_reset_btn">Press this button to return original state.</string>
    <string name="tut_sound_btn">Press this button to on/off sound.</string>
    <string name="tut_music_btn">Press this button to on/off background music.</string>

</resources>
