<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000" >

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="@drawable/bg_dialog_save_score"
        android:padding="8dp" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btnRandom"
                style="@style/BtnStyle"
                android:layout_width="@dimen/btn_size_main"
                android:layout_height="@dimen/btn_size_main"
                android:background="@drawable/fab_shape_circle"
                android:text="@string/auto_text"
                android:clickable="false" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tut_auto_btn"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll1"
            android:gravity="center" >

            <Button
                style="@style/BtnStyle"
                android:layout_width="@dimen/btn_size_main"
                android:layout_height="@dimen/btn_size_main"
                android:background="@drawable/fab_shape_circle_startbtn"
                android:text="@string/start_text"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tut_start_btn"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:gravity="center" >

            <Button
                style="@style/BtnStyle"
                android:layout_width="@dimen/btn_size_main"
                android:layout_height="@dimen/btn_size_main"
                android:background="@drawable/fab_shape_circle"
                android:text="@string/reset_text"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tut_reset_btn"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll3"
            android:gravity="center" >

            <ImageButton
                android:layout_width="@dimen/btn_size_main"
                android:layout_height="@dimen/btn_size_main"
                android:background="#00000000"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/icon_sound_on" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tut_sound_btn"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll4"
            android:gravity="center" >

            <ImageButton
                android:layout_width="@dimen/btn_size_main"
                android:layout_height="@dimen/btn_size_main"
                android:background="#00000000"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/icon_music_on" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tut_music_btn"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/rlContent"
        android:layout_alignTop="@id/rlContent"
        android:src="@drawable/close_icon"
        android:background="#00000000"
        android:layout_marginTop="-8dp"
        android:layout_marginRight="-8dp"
        android:contentDescription="@string/hello_world" />

</RelativeLayout>