<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@android:color/darker_gray" >
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
    
    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_top_high"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_color" >

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="@dimen/main_top_high"
            android:layout_height="@dimen/main_top_high"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/hello_world" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/main_element_margin"
            android:layout_marginLeft="@dimen/main_element_margin"
            android:text="@string/time_text"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvTimeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:text="@string/start_time"
            android:textColor="#ffffff" />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textView1"
            android:layout_marginTop="@dimen/main_element_margin"
            android:layout_marginLeft="@dimen/main_element_margin"
            android:text="@string/best_time_text"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvBestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toLeftOf="@+id/imageButton2"
            android:layout_marginRight="8dp"
            android:text="@string/start_time"
            android:textColor="#ffffff"
            android:ellipsize="end"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvBestTime"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/ivPhoto"
            android:src="@drawable/icon_sound_on"
            android:contentDescription="@string/hello_world"
            android:background="#00000000"
            android:onClick="onBtnSoundClick" />
        
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvTimeCounter"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/ivPhoto"
            android:src="@drawable/icon_music_on"
            android:contentDescription="@string/hello_world"
            android:background="#00000000"
            android:onClick="onBtnMusicClick" />

    </RelativeLayout>
    
    <com.tonyk.puzzlephoto.customview.PhotoViewCustom
        android:id="@+id/photoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:layout_below="@id/rlTop"
        android:background="@android:color/darker_gray"
        android:layout_margin="@dimen/photoview_margin" />
    
    <Button
        android:id="@+id/btnReset"
        android:layout_width="@dimen/btn_size_main"
        android:layout_height="@dimen/btn_size_main"
        android:layout_alignTop="@id/photoview"
        android:layout_alignRight="@id/photoview"
        android:text="@string/reset_text"
        style="@style/BtnStyle"
        android:onClick="onBtnResetClick"
        android:background="@drawable/fab_shape_circle" />
    
    <Button
        android:id="@+id/btnRandom"
        android:layout_width="@dimen/btn_size_main"
        android:layout_height="@dimen/btn_size_main"
        android:layout_alignTop="@id/photoview"
        android:layout_toLeftOf="@id/btnReset"
        android:onClick="onBtnRandomClick"
        android:text="@string/auto_text"
        style="@style/BtnStyle"
        android:background="@drawable/fab_shape_circle" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="@dimen/btn_size_main"
        android:layout_height="@dimen/btn_size_main"
        android:layout_alignTop="@id/photoview"
        android:layout_toLeftOf="@id/btnRandom"
        android:onClick="onBtnStartClick"
        android:text="@string/start_text"
        style="@style/BtnStyle"
        android:background="@drawable/fab_shape_circle_startbtn" />

</RelativeLayout>