<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:padding="10dp"
        android:text="@string/choose_level_and_photo"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"
        android:background="#1c5fab"
        android:orientation="horizontal"
        android:padding="0.5dp" >

        <RadioButton
            android:id="@+id/radioEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radiobtn_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/easy_3x4_text"
            android:textColor="@drawable/rbtn_textcolor_selector" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radiobtn_selector"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/medium_4x4_text"
            android:textColor="@drawable/rbtn_textcolor_selector" />

        <RadioButton
            android:id="@+id/radioHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radiobtn_selector"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/hard_5x5_text"
            android:textColor="@drawable/rbtn_textcolor_selector" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/radioGrp"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants" >

            <ImageView
                android:id="@+id/ivPhuongHong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/phuonghong" />

            <ImageView
                android:id="@+id/ivTulip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tulip" />

            <ImageView
                android:id="@+id/ivCuteDog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hello_world"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/cutedog" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/fab_shape_rectangle"
                android:onClick="onBtnGalleryClick"
                android:text="@string/get_photo_from_gallery"
                android:textColor="#ffffff" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>