<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_dialog_save_score"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/msg_you_done"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/msg_your_time"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tvTime"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:text="@string/your_name"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="4dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="none"
                android:textCursorDrawable="@drawable/color_cursor"
                android:background="@drawable/edittext_bg" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llName"
            android:layout_marginTop="10dp"
            android:src="@drawable/black_line"
            android:scaleType="fitXY"
            android:contentDescription="@string/hello_world" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/imageView1"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@+id/btnDialogCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:text="@string/cancel" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/divider"
                android:contentDescription="@string/hello_world" />

            <Button
                android:id="@+id/btnDialogSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:text="@string/save"
                android:textColor="@color/app_color"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>