<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/rlTopBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height_crop_screen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_color" >

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/btn_size_crop"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:onClick="onBtnCancelClick"
            android:background="@drawable/flat_cancel_btn_selector"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnDone"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/btn_size_crop"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:background="@drawable/flat_cancel_btn_selector"
            android:onClick="onBtnDoneClick"
            android:text="@string/crop_text"
            android:textColor="@color/app_color"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnDone"
            android:layout_toRightOf="@id/btnCancel"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:src="@drawable/rotate_anticlockwise"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hello_world"
                android:onClick="onBtnRotateAntiClockClick" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rotate_clockwise"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hello_world"
                android:onClick="onBtnRotateClockClick" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTopBar" >

        <ImageView
            android:id="@+id/ivPhotoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hello_world"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <com.tonyk.puzzlephoto.customview.MaskViewCustom
            android:id="@+id/maskView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ivPhotoView"
            android:layout_alignLeft="@id/ivPhotoView"
            android:layout_alignRight="@id/ivPhotoView"
            android:layout_alignTop="@id/ivPhotoView" />
    </RelativeLayout>

</RelativeLayout>